--- a/Silly Song/Base.lproj/Main.storyboard
+++ b/Silly Song/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Silly_Song" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kqx-Qu-2uX">
+                                <rect key="frame" x="16" y="122" width="343" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="X07-Tr-Gpq"/>
+                                    <constraint firstAttribute="width" constant="343" id="d2k-kn-ppR"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
+                                <connections>
+                                    <action selector="displayLyrics:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="xuA-n8-Qhi"/>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="editingDidBegin" id="Mhc-XQ-lvj"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SillySong" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Y8-Wf-rW6">
+                                <rect key="frame" x="16" y="20" width="229" height="94"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="229" id="Eei-9d-qJj"/>
+                                    <constraint firstAttribute="height" constant="94" id="oPf-HI-Odr"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="40"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3f-Sk-dNe">
+                                <rect key="frame" x="16" y="212" width="343" height="435"/>
+                                <color key="tintColor" red="0.89411764705882346" green="0.17901492379456885" blue="0.15909895291370563" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.8666666666666667" green="0.8666666666666667" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="35"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0078431372549019607" green="0.70196078431372544" blue="0.89411764705882346" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="y3f-Sk-dNe" firstAttribute="top" secondItem="kqx-Qu-2uX" secondAttribute="bottom" constant="40" id="Acq-dY-qhl"/>
+                            <constraint firstItem="kqx-Qu-2uX" firstAttribute="top" secondItem="4Y8-Wf-rW6" secondAttribute="bottom" constant="8" id="DlR-9A-YRo"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="y3f-Sk-dNe" secondAttribute="trailing" id="Elm-xU-JRD"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="y3f-Sk-dNe" secondAttribute="bottom" constant="20" id="IQn-AU-xn6"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="kqx-Qu-2uX" secondAttribute="leading" id="hzA-U8-pdj"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="y3f-Sk-dNe" secondAttribute="leading" id="oZg-FM-5ef"/>
+                            <constraint firstItem="4Y8-Wf-rW6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pCD-sn-gee"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="kqx-Qu-2uX" secondAttribute="trailing" id="zSo-HK-IQw"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="4Y8-Wf-rW6" secondAttribute="leading" id="zff-6v-cNy"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="lyricsView" destination="y3f-Sk-dNe" id="nKa-7n-LRC"/>
+                        <outlet property="nameField" destination="kqx-Qu-2uX" id="PtJ-V5-H2M"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
